# maestro

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  ROADMAP.md  SECURITY.md  build.rs  clippy.toml  deny.toml  directory-tree.md  dupes.toml  maestro.toml  rust-toolchain.toml
.cargo/: mutants.toml
.claude/: CLAUDE.md  CUSTOMIZATION-GUIDE.md  hooks  settings.json
.claude/agents/: subagent-architect.md  subagent-gatekeeper.md  subagent-idea-triager.md  subagent-master-planner.md  subagent-qa.md  subagent-security-analyst.md
.claude/commands/: create-subagent.md  implement.md  plan-feature.md  pushup.md  release.md  setup-notifications.md  setup-project.md  simplify.md  triage-idea.md  update-from-template.md  validate-contracts.md  video-frames.md
.claude/hooks/: README.md  implement-gates.sh  notify.ps1  notify.sh  parse_gatekeeper_report.py  parse_idea_triager_report.py  preflight.sh  sentinel-path.sh
.claude/skills/: README.md
.github/ISSUE_TEMPLATE/: bug.yml  config.yml  feature.yml  idea.yml
.github/workflows/: ci.yml  freshness.yml  nightly.yml  release.yml  self-host.yml  weekly.yml
.maestro/hooks/: implement-gates.sh  notify.ps1  notify.sh  parse_gatekeeper_report.py
.maestro/templates/: README.md  manifest.toml
benches/: parser.rs  turboquant.rs
docs/: FOLLOW-UPS.md  RUST-GUARDRAILS.md  ci-smoke-check.md  configuration.md  harness-acceptance.md  layers-debt.txt  tech-debt-catalog.md  templates.md
docs/adr/: 001-agent-graph-viz.md  002-agent-personalities.md
docs/agents/: claude.md  codex.md  minimax.md  mod.md  ollama.md  opencode.md  qwen.md
docs/api-contracts/: README.md  azure-devops-iterations.json  review-comment.json
docs/releases/: discord-v0.26.0-announcement.md  v0.25.0.md  v0.25.1.md  v0.26.0.md  v0.28.0.md
docs/research/: opencode-format-json.md  qwen-cli.md
docs/teams/: README.md  default-coder.md  default-docs.md  default-researcher.md  default-reviewer.md  default-triager.md
examples/: agent_graph_spike.rs  agent_personalities_spike.rs  regen_templates.rs
examples/multi-agent/: maestro.toml
examples/spike-toml-editor/: Cargo.toml  SPIKE.md
examples/spike-toml-editor/fixtures/: maestro.toml
examples/spike-toml-editor/src/: lib.rs  main.rs  schema.rs  widgets.rs
examples/spike-toml-editor/tests/: round_trip.rs
scripts/: allowlist-large-files.txt  architecture-layers.yml  check-coverage-tiers.sh  check-file-size.sh  check-layers.sh  commit-helper.sh  condense-issue.sh  coverage-tiers.yml  dor-lint.sh  pr-skeleton.sh  release.sh  render-readme-hero.sh  sanitize-target.sh  update-milestone-graph.py  verify-issue-485.sh  verify-issue-507.sh
scripts/tests/: test_commit_helper.bats  test_condense_issue.bats  test_dor_lint.bats  (+2 more)
src/: budget.rs  cli.rs  cli_team.rs  config.rs  continuous.rs  doctor.rs  git.rs  git_mock.rs  git_tests.rs  icon_mode.rs  icons.rs  lib.rs  main.rs  models.rs  prompts.rs  sanitizer.rs  util.rs
template/: README-TEMPLATE.md
tests/: legacy_skills_removed.rs  settings_caveman.rs  subagent_manifest_drift.rs  teams_cookbook_fixtures.rs  template_mirror_drift.rs  templates_render.rs
(+883 files in other folders)
