[package]
name = "maestro"
version = "0.1.0"
edition = "2024"
description = "Multi-session Claude Code orchestrator with Matrix-style TUI"
license = "MIT"

[[bin]]
name = "maestro"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
crossterm = { version = "0.28", features = ["event-stream"] }
ratatui = "0.29"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
libc = "0.2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1"
futures = "0.3"
tokio-stream = "0.1"
regex = "1"
async-trait = "0.1"
