[package]
name = "maestro"
version = "0.10.1"
edition = "2024"
description = "Multi-session Claude Code orchestrator with Matrix-style TUI"
license = "MIT"

[[bin]]
name = "maestro"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
clap_complete = "4"
clap_mangen = "0.2"
crossterm = { version = "0.28", features = ["event-stream"] }
ratatui = "0.29"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
libc = "0.2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1"
futures = "0.3"
tokio-stream = "0.1"
regex = "1"
async-trait = "0.1"
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
sha2 = "0.10"
arboard = "3.6.1"
image = { version = "0.25.10", features = ["png"], default-features = false }
pulldown-cmark = { version = "0.12", default-features = false }
tui-textarea = { version = "0.7", features = ["crossterm"] }
syntect = { version = "5", default-features = false, features = ["default-fancy"] }
syn = { version = "2", features = ["full", "visit"] }
walkdir = "2"
flate2 = "1"
tar = "0.4"

[build-dependencies]
clap = { version = "4", features = ["derive"] }
clap_complete = "4"
clap_mangen = "0.2"
anyhow = "1"

[dev-dependencies]
tempfile = "3"
insta = "1"
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "parser"
harness = false

[lints.clippy]
expect_used = "warn"

[profile.release]
lto = "fat"
codegen-units = 1
strip = true
panic = "abort"
